[gd_scene load_steps=7 format=3 uid="uid://bm08xuvo836ov"]

[ext_resource type="Script" path="res://combat/resources/partModel.gd" id="1_cp2fr"]
[ext_resource type="Texture2D" uid="uid://c11khfdiruoej" path="res://combat/parts/leg/romanMuscleLeg.png" id="2_45gv0"]
[ext_resource type="ArrayMesh" uid="uid://b4l0weuqlfu56" path="res://combat/parts/leg/romanMuscleUpperLeg.obj" id="3_5xxn6"]
[ext_resource type="ArrayMesh" uid="uid://dt7hfsppc2gii" path="res://combat/parts/leg/romanMuscleLowerLeg.obj" id="4_231gr"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_j4id4"]
transparency = 2
alpha_scissor_threshold = 0.5
alpha_antialiasing_mode = 0
cull_mode = 2
albedo_texture = ExtResource("2_45gv0")
texture_filter = 0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7jag5"]
transparency = 2
alpha_scissor_threshold = 0.5
alpha_antialiasing_mode = 0
cull_mode = 2
albedo_texture = ExtResource("2_45gv0")
texture_filter = 0

[node name="romaMuscleLeg" type="Node3D"]
transform = Transform3D(0.993029, -0.114968, 0.0259788, 0.103064, 0.9539, 0.281876, -0.057188, -0.277234, 0.959099, 0, 0, 0)
script = ExtResource("1_cp2fr")
type = 1

[node name="upperLeg" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.51163, 0)
material_override = SubResource("StandardMaterial3D_j4id4")
mesh = ExtResource("3_5xxn6")

[node name="lowerLegPivot" type="Node3D" parent="upperLeg"]
transform = Transform3D(0.995437, 0.076935, -0.0564581, -0.0896004, 0.957105, -0.275541, 0.0328375, 0.279343, 0.959631, 1.11759e-08, -0.676896, 8.9407e-08)

[node name="lowerLeg" type="MeshInstance3D" parent="upperLeg/lowerLegPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.766621, 0)
material_override = SubResource("StandardMaterial3D_7jag5")
mesh = ExtResource("4_231gr")
